# EntropyVisualizer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml  dev-build.yml  release-build.yml  release-on-tag.yml
include/: app.h  cache.h  core.h  icon.h  ui.h  version.h
include/entropy/: app.h  cache.h  core.h  hex_display_feature.h  hex_display_feature_manager.h  icon.h  ui.h  update.h  version.h
include/entropy/hexdisplay/: 55aa_finder.h  aewf_detector.h  executable_finder.h  zero_bytes.h
src/: app.cpp  cache.cpp  core.cpp  hex_display_feature_manager.cpp  ui.cpp  update.cpp
